Login/Logout and Registering is working

--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -75,6 +75,10 @@ a:hover, a:focus {
 	color: #143A5B;
 }
 
+p {
+	margin-bottom: 0.5em;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1.5em;
 	color: #222222;
