--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -13,12 +13,7 @@
 	<div class="page-title"><h1 class="title">DynVote</h1></div>
 	<div class="page-slogan">The Voting Advice Application that let you ask the questions.</div>
 	<div role="navigation" class="navigation">
-		<ul>
-			<li><a href="/">Start</a></li>
-			<li><a href="">Survey</a></li>
-			<li><a href="/register/add/">Register</a></li>
-			<li><a href="/home/login/">Login</a></li>
-		</ul>
+		{% include "home/menu.html" %}
 	</div>
 </div>
 
