--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -13,12 +13,7 @@
 	<div class="page-title"><h1 class="title">DynVote</h1></div>
 	<div class="page-slogan">The Voting Advice Application that let you ask the questions.</div>
 	<div role="navigation" class="navigation">
-		<ul>
-			<li><a href="/">Start</a></li>
-			<li><a href="">Survey</a></li>
-			<li><a href="/register/add">Register</a></li>
-			<li><a href="/home/login/">Login</a></li>
-		</ul>
+		{% include "home/menu.html" %}
 	</div>
 </div>
 
@@ -26,12 +21,9 @@
 	<div class="content">
 		<form id="login_form" method="post" action="/home/login/">
             {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
-
-            <input type="submit" value="submit" />
+            <p><label>Username:</label><input type="text" name="username" value="" size="50" /></p>
+            <p><label>Password:</label><input type="password" name="password" value="" size="50" /></p>
+            <input type="submit" value="Submit" />
         </form>
 	</div>
 </div>
