--- a/templates/home/register.html
+++ b/templates/home/register.html
@@ -18,6 +18,9 @@
 </div>
 
 <div class="content-wrapper wrapper clearfix">
+
+    {% include "home/status.html" %}
+
 	<div class="content">
 		{% if registered %}
         DynVote says: <strong>thank you for registering!</strong>
