--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,8 @@
 <html>
 <head>
     <title>DynVote</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'home/css/normalize.css' %}"  media="screen" />   
+    <link rel="stylesheet" type="text/css" href="{% static 'home/css/normalize.css' %}"  media="screen" />
+	<link rel="stylesheet" type="text/css" href="{% static 'home/css/font-awesome.css' %}"  media="screen" />
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />   
  	<meta charset="utf-8" />
 </head>
@@ -23,15 +24,38 @@
 
 	<div class="content">
 
+		<div class="promo-fields clearfix">
+			<div class="field">
+				<div class="field-inner">
+					<i class="fa fa-user-plus"></i>
+					<h2>Register</h2>
+					<p>
+						Go through the account registration process and log in to get started
+					</p>
+				</div>
+			</div>
+			<div class="field">
+				<div class="field-inner">
+					<i class="fa fa-bar-chart"></i>
+					<h2>Survey</h2>
+					<p>
+						Take the survey to find your matching candidates
+					</p>
+				</div>
+			</div>
+			<div class="field">
+				<div class="field-inner">
+					<i class="fa fa-question"></i>
+					<h2>Ask</h2>
+					<p>
+						Pose your own questions to candidates and others
+					</p>
+				</div>
+			</div>
+		</div>
 
 	</div>
 </div>
-
-<div class="footer-wrapper wrapper clearfix">
-	<div class="footer">
-
-	</div>
-</div>
-
+{% include "home/footer.html" %}
 </body>
 </html>
