--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -4,7 +4,8 @@
 <head>
     <title>DynVote</title>
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/normalize.css' %}"  media="screen" />   
-    <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />   
+    <link rel="stylesheet" type="text/css" href="{% static 'home/css/font-awesome.css' %}"  media="screen" />
+	<link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />
  	<meta charset="utf-8" />
 </head>
 <body>
@@ -31,11 +32,7 @@
 	</div>
 </div>
 
-<div class="footer-wrapper wrapper clearfix">
-	<div class="footer">
-
-	</div>
-</div>
+{% include "home/footer.html" %}
 
 </body>
 </html>
