--- a/templates/home/menu.html
+++ b/templates/home/menu.html
@@ -1,10 +1,11 @@
+{% load mytags %}
 <ul>
-	<li><a href="/">Start</a></li>
+	<li class="menuitem {% navactive request 'index' %}"><a href="{% url 'index' %}">Start</a></li>
 	{% if user.is_authenticated %}
-	<li><a href="/home/survey">Survey</a></li>
-	<li><a href="/home/logout/">Logout</a></li>
+	<li class="menuitem {% navactive request 'survey' %}"><a href="{% url 'survey' %}">Survey</a></li>
+	<li class="menuitem {% navactive request 'logout' %}"><a href="{% url 'logout' %}">Logout</a></li>
 	{% else %}
-	<li><a href="/home/register">Register</a></li>
-	<li><a href="/home/login/">Login</a></li>
+	<li class="menuitem {% navactive request 'register' %}"><a href="{% url 'register' %}">Register</a></li>
+	<li class="menuitem {% navactive request 'login' %}"><a href="{% url 'login' %}">Login</a></li>
 	{% endif %}
 </ul>
