--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -200,6 +200,10 @@ h2 {
 	font-size: 1.25em;
 }
 
+.survey-overview h2 {
+	font-size: 16px;
+}
+
 h3{
 	font-size: 1.625em;
 	margin-bottom: 1.2em;
@@ -262,6 +266,10 @@ h6 {
 
 .content {
 	margin: 15px;
+}
+
+.survey {
+	font-size: 14px;
 }
 
 .promo-fields {
@@ -337,6 +345,27 @@ h6 {
 
 .survey ul {
 	margin-bottom: 1em;
+}
+
+.survey ul li {
+	margin-bottom: 1em;
+}
+
+.survey label {
+	font-weight: normal;
+}
+
+.survey-overview {
+	float: left;
+}
+
+.survey-element:nth-of-type(odd) {
+    background: #e0e0e0;
+    padding: 1em 1em;
+}
+
+.survey-link {
+
 }
 
 .clearfix::after{
