--- a/templates/home/evaluation_detail.html
+++ b/templates/home/evaluation_detail.html
@@ -28,13 +28,13 @@
 
 		<div class="survey-overview">
 
-			<h2>Select a survey to fill out:</h2>
+            <h2>Select a survey to evaluate:</h2>
 
-			{% for survey in surveys %}
-			<div class="survey-element">
-				<a class="survey-link" href="/home/survey/{{survey.id}}">{{survey.name}}</a><br/>
-			</div>
-			{% endfor %}
+            {% for survey in surveys %}
+            <div class="survey-element">
+                <a class="survey-link" href="/home/evaluation/{{survey.id}}">{{survey.name}}</a><br/>
+            </div>
+            {% endfor %}
 		</div>
 
 		{% endblock %}
