--- a/templates/home/survey_detail.html
+++ b/templates/home/survey_detail.html
@@ -26,15 +26,25 @@
 
 		{% block content %}
 
-		<div class="survey-overview">
+    	<div class="survey">
+			<form enctype="multipart/form-data" action="/home/survey/{{survey.id}}/" method="post">
+				{% csrf_token %}
 
-			<h2>Select a survey to fill out:</h2>
-
-			{% for survey in surveys %}
-			<div class="survey-element">
-				<a class="survey-link" href="/home/survey/{{survey.id}}">{{survey.name}}</a><br/>
-			</div>
-			{% endfor %}
+				<ul>
+				{% for field in response_form %}
+					<li class="q-item" value="">
+						<div class="field-wrapper">
+							{{ field.errors }}
+							<label class="label-inline">{{ field.label }}</label>
+							<div class="form-field-body">
+								{{ field }}
+							</div>
+						</div>
+					</li>
+				{% endfor %}
+				</ul>
+			<div><input type="submit" value="Submit" /></div>
+		</form>
 		</div>
 
 		{% endblock %}
