--- a/templates/home/evaluation_detail.html
+++ b/templates/home/evaluation_detail.html
@@ -28,7 +28,7 @@
 
 		<div class="survey-overview">
 
-            <h2>Select a survey to evaluate:</h2>
+            <h2>Your Matches:</h2>
 
             {% for survey in surveys %}
             <div class="survey-element">
