--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -3,9 +3,7 @@
 <html>
 <head>
     <title>DynVote</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'home/css/normalize.css' %}"  media="screen" />   
-    <link rel="stylesheet" type="text/css" href="{% static 'home/css/font-awesome.css' %}"  media="screen" />
-	<link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />
+    {% include "home/header_files.html" %}
  	<meta charset="utf-8" />
 </head>
 <body>
