eval almmost done

--- a/templates/home/evaluation_detail.html
+++ b/templates/home/evaluation_detail.html
@@ -29,6 +29,14 @@
 			{% if exists%}
             <h2>Your Matchlist:</h2>
 
+			<div id="bar-1" class="bar-main-container azure">
+				<div class="wrap">
+      				<div class="bar-percentage" data-percentage="46"></div>
+					<div class="bar-container">
+						<div class="bar"></div>
+					</div>
+				</div>
+  			</div>
 
             {% else %}
 			<h2>There is not a response assigned to your account by this id:</h2>
