--- a/templates/home/footer.html
+++ b/templates/home/footer.html
@@ -1,5 +1,8 @@
+{% load staticfiles %}
 <div class="footer-wrapper wrapper">
 	<div class="footer">
 		<p>DynVote.com, a project by <i>Mansour Hamidi</i> and <i>Adrian H&auml;nni</i>.</p>
 	</div>
 </div>
+
+<script src="{% static 'home/js/percentage.js' %}" type="text/javascript"></script>
