--- a/templates/home/header_files.html
+++ b/templates/home/header_files.html
@@ -2,5 +2,5 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/normalize.css' %}"  media="screen" />
 	<link rel="stylesheet" type="text/css" href="{% static 'home/css/font-awesome.css' %}"  media="screen" />
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />
-    <script src="{% static 'home/js/jquery-1.11.3.min.js' %}"></script>
-    <script src="{% static 'home/js/percentage.js' %}"></script>
+    <script src="{% static 'home/js/jquery-1.11.3.min.js' %}" type="text/javascript"></script>
+
