--- a/templates/home/header_files_with_admin_js.html
+++ b/templates/home/header_files_with_admin_js.html
@@ -4,14 +4,13 @@
     <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}"  media="screen" />
     <script src="{% static 'home/js/jquery-1.11.3.min.js' %}" type="text/javascript"></script>
 
-    <script type="text/javascript" src="/admin/jsi18n/"></script>
-    <script type="text/javascript" src="/static/admin/js/core.js"></script>
-    <script type="text/javascript" src="/static/admin/js/admin/RelatedObjectLookups.js"></script>
-    <script type="text/javascript" src="/static/admin/js/jquery.js"></script>
-    <script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
-    <script type="text/javascript" src="/static/admin/js/actions.js"></script>
-    <script type="text/javascript" src="/static/admin/js/SelectBox.js"></script>
-    <script type="text/javascript" src="/static/admin/js/SelectFilter2.js"></script>
-    <script type="text/javascript" src="/static/admin/js/related-widget-wrapper.js"></script>
-    <script type="text/javascript" src="/static/admin/js/calendar.js"></script>
-    <script type="text/javascript" src="/static/admin/js/admin/DateTimeShortcuts.js"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/jsi18n.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/core.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/RelatedObjectLookups.js' %}"></script>
+
+    <script type="text/javascript" src="{% static 'home/js/adminjs/jquery.init.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/actions.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/SelectBox.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/SelectFilter2.js' %}"></script>
+    <script type="text/javascript" src="{% static 'home/js/adminjs/related-widget-wrapper.js' %}"></script>
+
