--- a/templates/home/ask_detail.html
+++ b/templates/home/ask_detail.html
@@ -26,7 +26,11 @@
 
 		<div class="ask-overview">
 
-            <h2>Your Question has been saved:</h2>
+            <h2>Question has been saved</h2>
+
+			<p>The question "{{customQuestion.question}}" has been added to survey "{{customQuestion.survey.name}}".</p>
+
+			<p>Click here to <a href="/home/survey/{{customQuestion.survey.id}}">answer the survey</a></p>
 
 		</div>
 
