--- a/templates/home/evaluation_detail.html
+++ b/templates/home/evaluation_detail.html
@@ -42,7 +42,7 @@
 				</div>
 			</div>
 
-			<div class="totalCount">Total counted answers: {{match.totalAnswers}}</div>
+			<div class="totalCount">Total compared answers: {{match.totalAnswers}}</div>
 
 			{% endfor %}
 
